config for training and evaluation, label map

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,9 @@
 # =========== #
+#     Dir     #
+# =========== #
+detector/train/models/*
+
+# =========== #
 #  Notebooks  #
 # =========== #
 .idea*
